# Cpp-and-Rust

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.devcontainer/: devcontainer.json
cbindgen-rust/: CMakeLists.txt  main.cpp
cbindgen-rust/lib/: CMakeLists.txt  Cargo.toml
cpp-cbindgen-rust/: CMakeLists.txt  main.cpp
cpp-rust/: CMakeLists.txt
cpp-rust/cbindgen/: CMakeLists.txt  main.cpp
cpp-rust/cbindgen/lib/: cbindgen.toml
cpp-rust/cbindgen/lib/src/: lib.rs  my_struct.rs
protobuf/: CMakeLists.txt
protobuf/cpp/: CMakeLists.txt  main.cpp
protobuf/cpp-client/: main.cpp
protobuf/cpp-server/: CMakeLists.txt  main.cpp
protobuf/cpp-server/proto/: CMakeLists.txt
protobuf/cpp/cpp-client/: CMakeLists.txt  main.cpp
protobuf/cpp/cpp-client/proto/: CMakeLists.txt
protobuf/cpp/cpp-server/: CMakeLists.txt  main.cpp
protobuf/cpp/cpp-server/proto/: CMakeLists.txt
protobuf/cpp/proto/: CMakeLists.txt
protobuf/tonic-rust/: CMakeLists.txt  Cargo.toml
protobuf/tonic-rust/src/: client.rs  server.rs
rust-cpp/: CMakeLists.txt
rust-cpp/autocxx/: CMakeLists.txt  Cargo.toml  build.rs
rust-cpp/autocxx/src/: main.rs  math.cpp  math.hpp
rust-cpp/bindgen/: CMakeLists.txt
rust-cpp/bindgen/cpp/: car.hpp  carfactory.hpp
rust-cpp/bindgen/rs/: build.rs
rust-cpp/bindgen/rs/src/: main.rs
rust-cpp/cpp/: car.cpp  carfactory.cpp  component.cpp  component.hpp
rust-cpp/rs/: Cargo.toml
tonic-rust/src/: client.rs  server.rs
